Use right comment syntax for bash

--- a/actions/phpstan/action.yml
+++ b/actions/phpstan/action.yml
@@ -74,7 +74,7 @@ runs:
         cd modules/${{ env.REPO_NAME }}
         PARAMS='--error-format=github --no-progress'
         INPUT=${{ inputs.config_path }}
-        // Sanitize a bit.
+        # Sanitize a bit.
         CONF=${INPUT%% *}
         if [[ $CONF != '' ]]
         then
