--- a/actions/phpcs_full/action.yml
+++ b/actions/phpcs_full/action.yml
@@ -7,7 +7,7 @@ inputs:
     type: string
     default: "8.3"
   fail_on_warnings:
-    description: "Do not fail on standard warnings, only on errors."
+    description: "Whether to also fail on standard warnings, not only on errors."
     required: false
     type: boolean
     default: true
