--- a/actions/phpstan/action.yml
+++ b/actions/phpstan/action.yml
@@ -48,7 +48,7 @@ runs:
       run: |
         : Fetch dependencies if any
         cd ./modules
-        DEPS=${{ inputs.module_dependencies }}
+        DEPS="${{ inputs.module_dependencies }}"
         BASE='https://github.com/backdrop-contrib'
         IFS=',' read -r -a PROJECTS <<< "$DEPS"
         for PROJECT in "${PROJECTS[@]}"
