Another attempt for more apt silence

--- a/actions/simpletest/action.yml
+++ b/actions/simpletest/action.yml
@@ -62,6 +62,7 @@ runs:
         echo "</VirtualHost>" >> default.conf
         sudo mv default.conf /etc/apache2/sites-available/000-default.conf
         # Install Apache modules
+        sudo apt-get -q update > /dev/null 2>&1
         sudo apt-get -q install libapache2-mod-fcgid
         sudo a2enmod rewrite proxy fcgid proxy_fcgi
         sudo chmod 751 /home/runner
