--- a/actions/phpcs_full/action.yml
+++ b/actions/phpcs_full/action.yml
@@ -15,6 +15,10 @@ inputs:
 runs:
   using: "composite"
   steps:
+    - name: Debug
+      shell: bash
+      run: echo 'Context: ${{fromJson(github)}}'
+
     - name: Setup PHP with CodeSniffer tool
       uses: shivammathur/setup-php@v2
       with:
