--- a/actions/phpcs_full/action.yml
+++ b/actions/phpcs_full/action.yml
@@ -17,7 +17,12 @@ runs:
   steps:
     - name: Debug
       shell: bash
-      run: echo 'Context: ${{fromJson(github)}}'
+      run: |
+        echo 'action ${{ github.action  }}'
+        echo 'action_path ${{ github.action_path }}'
+        echo 'action_ref ${{ github.action_ref }}'
+        echo 'action_repository ${{ github.action_repository }}'
+        echo 'action_status ${{ github.action_status }}'
 
     - name: Setup PHP with CodeSniffer tool
       uses: shivammathur/setup-php@v2
