What is in there

--- a/actions/phpstan/action.yml
+++ b/actions/phpstan/action.yml
@@ -23,15 +23,13 @@ runs:
     - name: Setup env
       shell: bash
       env:
-        ACTION_REF: ${{ github.action_ref }}
         ACTION_PATH: ${{ github.action_path }}
-        ACTION_REPO: ${{ github.action_repository }}
       run: |
         : Setup env
         echo "REPO_NAME=${PWD##*/}" >> $GITHUB_ENV
-        echo 'action ref is: ${{ env.ACTION_REF }}'
         echo 'action path is: ${{ env.ACTION_PATH }}'
-        echo 'action repo is: ${{ env.ACTION_REPO }}'
+        ACTION_PATH='${{ env.ACTION_PATH }}'
+        ls -l $ACTION_PATH
 
     - name: Setup PHP with PHPStan tool
       uses: shivammathur/setup-php@v2
